# Lane-Departure-Warning-System

./: README.md
src/: CMakeLists.txt  main.c
src/actuators/buzzer/: buzzer.c  buzzer.h
src/actuators/led/: led.c  led.h
src/actuators/motor/: motor.c  motor.h
src/sensors/infrared/: infrared.c  infrared.h
src/sensors/light/: light.c  light.h
src/sensors/ultrasonic/: ultrasonic.c  ultrasonic.h
